--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: speedtest
-        image: speedtest-app:latest
+        image: ghcr.io/rpanzer-aviatrix/speedtest:latest
         ports:
         - containerPort: 3000
           name: http
