--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,8 +68,8 @@ jobs:
         output-file: hadolint-results.sarif
         no-fail: true
         
-    - name: Upload Hadolint scan results to GitHub Security tab
-      uses: github/codeql-action/upload-sarif@v3
-      if: always()
-      with:
-        sarif_file: hadolint-results.sarif
+    # - name: Upload Hadolint scan results to GitHub Security tab
+    #   uses: github/codeql-action/upload-sarif@v3
+    #   if: always()
+    #   with:
+    #     sarif_file: hadolint-results.sarif
